# strongswan

./: .gitignore  install_dep.sh  kiknos_build.sh
src/jitike-protobuf/: Dockerfile  README.md
src/jitike-protobuf/ci/: pipeline.yml
src/jitike-protobuf/ci/tasks/: build-pr.sh  build-pr.yml  build.sh  build.yml
src/jitike-protobuf/protobuf/esp/: esp.proto
src/jitike-protobuf/protobuf/ike/: ike.proto
src/libcharon/: Makefile.am  daemon.c  daemon.h
src/libcharon/kernel/: kernel_handler.c
src/libcharon/network/: sender.c
src/libcharon/plugins/jitike/: Makefile.am  jitike_async_job.c  jitike_async_job.h  jitike_crypto.c  jitike_crypto.h  jitike_db.h  jitike_del_job.c  jitike_del_job.h  jitike_hiredis.h  jitike_ipsec.c  jitike_ipsec.h  jitike_message.c  jitike_message.h  jitike_plugin.c  jitike_plugin.h  jitike_redis.c  jitike_redis.h  jitike_redis_sentinel.c  jitike_redis_sentinel.h  jitike_spi_generator.c  jitike_spi_generator.h  tests.c  tests.h
src/libcharon/plugins/jitike/suites/: test_jitike_crypto.c
src/libcharon/plugins/stroke/: stroke_control.c
src/libcharon/plugins/vici/: Makefile.am  vici_control.c
src/libcharon/processing/jobs/: process_message_job.c  rekey_child_sa_job.c  rekey_child_sa_job.h  send_dpd_job.c  (+3 more)
src/libcharon/redis/: redis_child_rekey_job.c  redis_child_rekey_job.h  redis_dh.c  redis_dh.h  redis_ike_rekey_job.c  redis_ike_rekey_job.h  redis_interface.c  redis_interface.h  redis_load_ike.c  redis_load_ike.h  redis_publish_job.c  redis_publish_job.h
src/libcharon/sa/: ike_sa.c  ike_sa.h  ike_sa_manager.c  ike_sa_manager.h  task_manager.h
src/swanctl/: Makefile.am  command.h
src/swanctl/commands/: ike_load.c  ike_unload.c  rekey.c  send_dpd.c
(+3 files in other folders)
